--- a/src/common/css/mine.css
+++ b/src/common/css/mine.css
@@ -76,10 +76,10 @@
     background-size: contain;
 }
 
-.avatar p {
+/* .avatar p {
     color: #333333;
     display: inline-block;
-}
+} */
 
 .ru {
     line-height: 2.222222rem;
