--- a/src/common/scss/detail.scss
+++ b/src/common/scss/detail.scss
@@ -86,8 +86,8 @@ body {
     left: 0;
     background-color: #fff;
     width: 100%;
-    height: 1.37037rem;
-    line-height: 1.37037rem;
+    height: 1.681481rem;
+    line-height: 1.681481rem;
     border-top: .018519rem solid #cccccc;
     z-index: 3;
 
@@ -117,7 +117,17 @@ body {
     z-index: 4;
 }
 
-.yuans {
+.deimg {
+    text-align: center;
+    margin-bottom: .462963rem;
+
+    img {
+        width: 9.722222rem;
+        height: 6.555556rem;
+    }
+}
+
+.yuanss {
     height: .462963rem;
     width: .462963rem;
     border-radius: 50%;
@@ -129,4 +139,5 @@ body {
     position: fixed;
     left: .944444rem;
     bottom: .833333rem;
+    z-index: 3;
 }
